force-app/main/default/objects/CaseSolutionTranslation__c/CaseSolutionTranslation__c.object-meta.xml
<CustomObject>
    <label>Case Solution Translation</label>
    <nameField>
        <label>Case Solution Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Solution Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>