force-app/main/default/objects/CaseSolutionTranslation__c/fields/CaseSolution__c.field-meta.xml
<CustomField>
    <fullName>CaseSolution__c</fullName>
    <label>Case Solution</label>
    <referenceTo>CaseSolution__c</referenceTo>
    <relationshipLabel>Case Solution Translations</relationshipLabel>
    <relationshipName>Case_Solution_Translations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>